<resources>
    <string name="app_name">比分App</string>

    <string name="account">手机号</string>
    <string name="account_name">用户名</string>
    <string name="regist_account">手机号注册</string>
    <string name="register_name">请输入用户名</string>
    <string name="password">请输入登录密码</string>
    <string name="resist_password">请输入密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="score_state">Score State</string>
    <string name="time">08:30</string>
    <string name="race_row">意甲第26轮</string>
    <string name="race_team_one">尤文图斯</string>
    <string name="race_team_two">史博尔</string>
    <string name="score_team_one">3</string>
    <string name="score_team_two">1</string>
    <string name="today_time">今天 12月12日 星期二</string>

</resources>
